* Do not make gtk and tryton required even when using screenshots

Version 0.6: 2014-10-18
* Fix screenshot bug: allow to generate more than 3 screenshots
* Fix screenshot bug: show icons correctly
* Get Tryton server connection params from configuration and also screenshots
  size
* Add **model** directive to print model name
* Implemented *field* option in **view** directive
* Use *height*/*width* options in **view** directive (inherited from Image
  directive) to resize Tryton window before take the screenshot (it they are
  not supplied, it use the values specified in configuration options).
* Add *show_menu* option to **view** directive to unhide the menu and expand
  and select the supplied menu item.
* Add *domain* option to **view** directive to force values in some fields

Version 0.5 2014-06-18
* Add option parser to get modules from XML-RPC server
* Removed sphinxcontrib-inheritance from requirements
* First functional version of view directive (screenshot) without support for
  "field" attribute, support of empty forms nor a way to define which record
  use.

Version 0.4 2013-11-13
* Package provide scripts to bootstrap and mantain the sphinx project

Version 0.3 - 2013-06-04
* Implemented *class* option for all trydoc directives

Version 0.2 - 2013-02-25
* Configuration option to define the list of modules to install in a ':module:'
  database (sqlite).

Version 0.1
* Initial release
