@@ -204,12 +204,12 @@ domain.
 
 .. warning:: All values in the domain must to be in quotes, even True/False.
 
-It also has all options of `image directive`_: alt, height, width, scale,
+It also has all options of `digure directive`_: alt, height, width, scale,
 align, name, target, class... the ``:class: CLASSLIST`` option adds the
 specified class to the default class *trydocview* (which can be changed with
 the configuration option *trydoc_viewclass*).
 
-.. _image directive: http://docutils.sourceforge.net/docs/ref/rst/directives.html#image
+.. _figure directive: http://docutils.sourceforge.net/docs/ref/rst/directives.html#figure
 
 Inline usage
 ~~~~~~~~~~~~
